--- a/install
+++ b/install
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-cp -v ./{search_backup.js,window.html} /opt/vivaldi/resources/vivaldi/
+sudo cp -v ./{search_backup.js,window.html} /opt/vivaldi/resources/vivaldi/
